# CMM_projects

a0-trinhhe/: my-info.json
a0-trinhhe/src/math/: add.cpp
a1-trinhhe/src/kinematics/: ForwardKinematics.h  InverseKinematics.h
a2-trinhhe/src/app/: robots.h
a2-trinhhe/src/libs/gui/include/gui/: renderer.h
a2-trinhhe/src/libs/simAndControl/kinematics/: IK_Solver.h
a2-trinhhe/src/libs/simAndControl/locomotion/: KinematicTrackingController.h  LocomotionPlannerHelpers.h  SimpleLocomotionTrajectoryPlanner.h
a2-trinhhe/src/libs/simAndControl/robot/: GeneralizedCoordinatesRobotRepresentation.cpp
a3-trinhhe/: Readme.md
a3-trinhhe/src/app/: main.cpp
a3-trinhhe/src/boids/: boids.h
a4-trinhhe/: Readme.md
a4-trinhhe/src/app/: manip-app.cpp
a4-trinhhe/src/femLib/: Pin.h  Triangle.h
a4-trinhhe/src/helpersLib/: BernHelpers.h
a5-trinhhe/: README.md
a5-trinhhe/src/app/: app.h  scenes.h
a5-trinhhe/src/libs/sim/include/sim/: RBPhysicsEngine.h
a6-trinhhe/: Readme.md
a6-trinhhe/src/: CMakeLists.txt
a6-trinhhe/src/app/: CMakeLists.txt  challenge-app.cpp  shooting-app.cpp  transcription-app.cpp
a6-trinhhe/src/guiLib/: application.h
a6-trinhhe/src/helpersLib/: BernHelpers.h  CMakeLists.txt
a6-trinhhe/src/optLib/: CMakeLists.txt  GradientDescentMinimizer.h  NewtonFunctionMinimizer.h  ObjectiveFunction.h
